--- a/src/MediaConverter/MediaConverter/MediaConverter.csproj
+++ b/src/MediaConverter/MediaConverter/MediaConverter.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Includes\Data\Structure\ConfigStructure.cs" />
     <Compile Include="Includes\Data\Structure\MediaStructure.cs" />
     <Compile Include="Includes\Data\Storage.cs" />
+    <Compile Include="Includes\Forms\MediaItemEditor\MediaItemRenamer\MediaItemRenamer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Includes\Forms\MediaItemEditor\MediaItemRenamer\MediaItemRenamer.Designer.cs">
+      <DependentUpon>MediaItemRenamer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Includes\Tools\Managers\ConfigManager.cs" />
     <Compile Include="Includes\Tools\Managers\ConvertManager.cs" />
     <Compile Include="Includes\Tools\Forms.cs" />
@@ -63,23 +69,26 @@
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Init.cs" />
-    <Compile Include="MediaItemEditor.cs">
+    <Compile Include="Includes\Forms\MediaItemEditor\MediaItemEditor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MediaItemEditor.Designer.cs">
+    <Compile Include="Includes\Forms\MediaItemEditor\MediaItemEditor.Designer.cs">
       <DependentUpon>MediaItemEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SettingsEditor.cs">
+    <Compile Include="Includes\Forms\SettingsEditor\SettingsEditor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SettingsEditor.Designer.cs">
+    <Compile Include="Includes\Forms\SettingsEditor\SettingsEditor.Designer.cs">
       <DependentUpon>SettingsEditor.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Includes\Forms\MediaItemEditor\MediaItemRenamer\MediaItemRenamer.resx">
+      <DependentUpon>MediaItemRenamer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MediaItemEditor.resx">
+    <EmbeddedResource Include="Includes\Forms\MediaItemEditor\MediaItemEditor.resx">
       <DependentUpon>MediaItemEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -92,7 +101,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SettingsEditor.resx">
+    <EmbeddedResource Include="Includes\Forms\SettingsEditor\SettingsEditor.resx">
       <DependentUpon>SettingsEditor.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -111,6 +120,8 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="logo_256x.ico" />
+    <None Include="Resources\rename_button.png" />
+    <None Include="Resources\edit_button.png" />
     <None Include="Resources\refresh_button.png" />
     <None Include="Resources\loading_icon.gif" />
     <None Include="Resources\settings_button.png" />
@@ -119,8 +130,6 @@
     <None Include="Resources\asciiArtBanner.txt" />
     <None Include="Resources\logo_256x.png" />
     <None Include="Resources\deselect_all_button.png" />
-    <None Include="Resources\edit_bulk_button.png" />
-    <None Include="Resources\edit_single_button.png" />
     <None Include="Resources\select_invert_button.png" />
     <None Include="Resources\select_all_button.png" />
     <None Include="Resources\view_media_button.png" />
